[gd_scene load_steps=8 format=2]

[ext_resource path="res://special_scenes/option_screen/CommandOption.gd" type="Script" id=1]
[ext_resource path="res://interface/MapButtonScene.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/theme/DefaultOptionFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://ButtonRepresentation.tscn" type="PackedScene" id=4]
[ext_resource path="res://RemapButton.tscn" type="PackedScene" id=5]

[sub_resource type="GDScript" id=1]
script/source = "extends Control

var operator = 50
onready var buttons = $Buttons
onready var tween = $Tween
onready var destination = rect_size.x - buttons.rect_size.x

func calculate_dist(x, y):
	print(x, y)
	if x > y:
		return 0
	else:
		return x-y
func _ready():
	yield(get_tree().create_timer(0.3), \"timeout\")
	var anim = $AnimationPlayer.get_animation('Scroll')
	var dest = calculate_dist(rect_size.x, buttons.rect_size.x)
	anim.track_set_key_value(0, 0, dest)
	anim.track_set_key_value(0, 2, dest)
	$AnimationPlayer.play(\"Scroll\")
	
func add_button(button: ShowedButton):
	buttons.add_child(button)
	yield(get_tree().create_timer(0.3), \"timeout\")
	var anim = $AnimationPlayer.get_animation('Scroll')
	var dest = calculate_dist(rect_size.x, buttons.rect_size.x)
	anim.track_set_key_value(0, 0, dest)
	anim.track_set_key_value(0, 2, dest)
	$AnimationPlayer.stop()
	$AnimationPlayer.play(\"Scroll\")
	
	
func clear():
	for b in buttons.get_children():
		b.queue_free()
	
	yield(get_tree().create_timer(0.4), \"timeout\")
	buttons.rect_size = rect_size
	print(buttons.rect_size)
	var dest = calculate_dist(rect_size.x, buttons.rect_size.x)
	var anim = $AnimationPlayer.get_animation('Scroll')
	anim.track_set_key_value(0, 0, 0)
	anim.track_set_key_value(0, 2, 0)
	
		
"

[sub_resource type="Animation" id=2]
resource_name = "Scroll"
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Buttons:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 6 ),
"transitions": PoolRealArray( -2, -2, -2 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0 ]
}

[node name="RemapAction" type="MarginContainer"]
margin_right = 1126.0
margin_bottom = 58.0
rect_min_size = Vector2( 450, 50 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
remapScene = ExtResource( 2 )
remapButton = ExtResource( 5 )
action = "up"
device = "kb1"
button_scene = ExtResource( 4 )

[node name="Container" type="HBoxContainer" parent="."]
margin_right = 1126.0
margin_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Padding2" type="Label" parent="Container"]
margin_top = 37.0
margin_right = 10.0
margin_bottom = 63.0
rect_min_size = Vector2( 10, 0 )
custom_fonts/font = ExtResource( 3 )
uppercase = true

[node name="Description" type="Label" parent="Container"]
margin_left = 14.0
margin_top = 37.0
margin_right = 45.0
margin_bottom = 63.0
custom_fonts/font = ExtResource( 3 )
text = "up"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Padding3" type="Label" parent="Container"]
margin_left = 49.0
margin_top = 37.0
margin_right = 149.0
margin_bottom = 63.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 9
custom_fonts/font = ExtResource( 3 )
uppercase = true

[node name="ScrollContainer" type="Control" parent="Container"]
margin_left = 153.0
margin_right = 956.0
margin_bottom = 100.0
grow_horizontal = 2
rect_min_size = Vector2( 0, 100 )
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
script = SubResource( 1 )

[node name="Buttons" type="HBoxContainer" parent="Container/ScrollContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Container/ScrollContainer"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Container/ScrollContainer"]
autoplay = "Scroll"
anims/Scroll = SubResource( 2 )

[node name="AddMapping" type="Button" parent="Container"]
margin_left = 960.0
margin_right = 1046.0
margin_bottom = 100.0
text = "  +  "

[node name="RemoveMapping" type="Button" parent="Container"]
margin_left = 1050.0
margin_right = 1126.0
margin_bottom = 100.0
text = "  -  "

[connection signal="focus_entered" from="." to="." method="_on_MarginContainer_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_MarginContainer_focus_exited"]
[connection signal="pressed" from="Container/AddMapping" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Container/RemoveMapping" to="." method="_on_RemoveMapping_pressed"]
